src/main/java/cambridge/parser/expressions/ExpressionParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g 2009-10-31 18:24:09

package cambridge.parser.expressions;


import org.antlr.runtime.*;

public class ExpressionParser extends Parser {
   public static final String[] tokenNames = new String[]{
      "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "INTLITERAL", "LONGLITERAL", "FLOATLITERAL", "DOUBLELITERAL", "STRINGLITERAL", "CHARLITERAL", "TRUE", "FALSE", "NULL", "IntegerNumber", "LongSuffix", "HexPrefix", "HexDigit", "Exponent", "NonIntegerNumber", "FloatSuffix", "DoubleSuffix", "EscapeSequence", "WS", "SUPER", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "DOT", "EQ", "BANG", "TILDE", "EQEQ", "AMPAMP", "BARBAR", "PLUS", "SUB", "STAR", "SLASH", "AMP", "BAR", "CARET", "PERCENT", "BANGEQ", "GT", "LT", "LETTER", "JavaIDDigit"
   };
   public static final int LT = 46;
   public static final int STAR = 38;
   public static final int IntegerNumber = 14;
   public static final int LETTER = 47;
   public static final int AMP = 40;
   public static final int Exponent = 18;
   public static final int SUB = 37;
   public static final int EOF = -1;
   public static final int HexDigit = 17;
   public static final int LPAREN = 25;
   public static final int LBRACKET = 27;
   public static final int RPAREN = 26;
   public static final int SLASH = 39;
   public static final int IDENTIFIER = 4;
   public static final int NonIntegerNumber = 19;
   public static final int FloatSuffix = 20;
   public static final int CARET = 42;
   public static final int TILDE = 32;
   public static final int BANGEQ = 44;
   public static final int BARBAR = 35;
   public static final int PLUS = 36;
   public static final int SUPER = 24;
   public static final int RBRACKET = 28;
   public static final int EQ = 30;
   public static final int DOT = 29;
   public static final int AMPAMP = 34;
   public static final int EQEQ = 33;
   public static final int HexPrefix = 16;
   public static final int PERCENT = 43;
   public static final int NULL = 13;
   public static final int DOUBLELITERAL = 8;
   public static final int BANG = 31;
   public static final int INTLITERAL = 5;
   public static final int TRUE = 11;
   public static final int LongSuffix = 15;
   public static final int LONGLITERAL = 6;
   public static final int WS = 23;
   public static final int DoubleSuffix = 21;
   public static final int STRINGLITERAL = 9;
   public static final int CHARLITERAL = 10;
   public static final int JavaIDDigit = 48;
   public static final int GT = 45;
   public static final int FALSE = 12;
   public static final int FLOATLITERAL = 7;
   public static final int EscapeSequence = 22;
   public static final int BAR = 41;

   // delegates
   // delegators


   public ExpressionParser(TokenStream input) {
      this(input, new RecognizerSharedState());
   }

   public ExpressionParser(TokenStream input, RecognizerSharedState state) {
      super(input, state);

   }


   public String[] getTokenNames() {
      return ExpressionParser.tokenNames;
   }

   public String getGrammarFileName() {
      return "/Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g";
   }


   // $ANTLR start "compilationUnit"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:15:1: compilationUnit returns [Expression value] : e= expression ;
   public final Expression compilationUnit() throws RecognitionException {
      Expression value = null;

      Expression e = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:19:5: (e= expression )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:19:9: e= expression
         {
            pushFollow(FOLLOW_expression_in_compilationUnit47);
            e = expression();

            state._fsp--;

            value = e;

         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "compilationUnit"


   // $ANTLR start "parExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:22:1: parExpression returns [Expression value] : '(' e= expression ')' ;

   public final Expression parExpression() throws RecognitionException {
      Expression value = null;

      Expression e = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:23:5: ( '(' e= expression ')' )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:23:9: '(' e= expression ')'
         {
            match(input, LPAREN, FOLLOW_LPAREN_in_parExpression73);
            pushFollow(FOLLOW_expression_in_parExpression77);
            e = expression();

            state._fsp--;

            match(input, RPAREN, FOLLOW_RPAREN_in_parExpression79);
            value = e;

         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "parExpression"


   // $ANTLR start "expression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:26:1: expression returns [Expression value] : l= conditionalAndExpression ( '||' r= conditionalAndExpression )* ;

   public final Expression expression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:27:5: (l= conditionalAndExpression ( '||' r= conditionalAndExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:27:9: l= conditionalAndExpression ( '||' r= conditionalAndExpression )*
         {
            pushFollow(FOLLOW_conditionalAndExpression_in_expression112);
            l = conditionalAndExpression();

            state._fsp--;

            value = l;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:28:9: ( '||' r= conditionalAndExpression )*
            loop1:
            do {
               int alt1 = 2;
               int LA1_0 = input.LA(1);

               if ((LA1_0 == BARBAR)) {
                  alt1 = 1;
               }


               switch (alt1) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:28:10: '||' r= conditionalAndExpression
                  {
                     match(input, BARBAR, FOLLOW_BARBAR_in_expression125);
                     pushFollow(FOLLOW_conditionalAndExpression_in_expression131);
                     r = conditionalAndExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.ConditionalOr, value, r);

                  }
                  break;

                  default:
                     break loop1;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "expression"


   // $ANTLR start "conditionalAndExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:32:1: conditionalAndExpression returns [Expression value] : l= inclusiveOrExpression ( '&&' r= inclusiveOrExpression )* ;

   public final Expression conditionalAndExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:33:5: (l= inclusiveOrExpression ( '&&' r= inclusiveOrExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:33:9: l= inclusiveOrExpression ( '&&' r= inclusiveOrExpression )*
         {
            pushFollow(FOLLOW_inclusiveOrExpression_in_conditionalAndExpression176);
            l = inclusiveOrExpression();

            state._fsp--;

            value = l;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:34:9: ( '&&' r= inclusiveOrExpression )*
            loop2:
            do {
               int alt2 = 2;
               int LA2_0 = input.LA(1);

               if ((LA2_0 == AMPAMP)) {
                  alt2 = 1;
               }


               switch (alt2) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:34:10: '&&' r= inclusiveOrExpression
                  {
                     match(input, AMPAMP, FOLLOW_AMPAMP_in_conditionalAndExpression189);
                     pushFollow(FOLLOW_inclusiveOrExpression_in_conditionalAndExpression195);
                     r = inclusiveOrExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.ConditionalAnd, value, r);

                  }
                  break;

                  default:
                     break loop2;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "conditionalAndExpression"


   // $ANTLR start "inclusiveOrExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:38:1: inclusiveOrExpression returns [Expression value] : l= exclusiveOrExpression ( '|' r= exclusiveOrExpression )* ;

   public final Expression inclusiveOrExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:39:5: (l= exclusiveOrExpression ( '|' r= exclusiveOrExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:39:9: l= exclusiveOrExpression ( '|' r= exclusiveOrExpression )*
         {
            pushFollow(FOLLOW_exclusiveOrExpression_in_inclusiveOrExpression240);
            l = exclusiveOrExpression();

            state._fsp--;

            value = l;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:40:9: ( '|' r= exclusiveOrExpression )*
            loop3:
            do {
               int alt3 = 2;
               int LA3_0 = input.LA(1);

               if ((LA3_0 == BAR)) {
                  alt3 = 1;
               }


               switch (alt3) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:40:10: '|' r= exclusiveOrExpression
                  {
                     match(input, BAR, FOLLOW_BAR_in_inclusiveOrExpression253);
                     pushFollow(FOLLOW_exclusiveOrExpression_in_inclusiveOrExpression259);
                     r = exclusiveOrExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.Or, value, r);

                  }
                  break;

                  default:
                     break loop3;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "inclusiveOrExpression"


   // $ANTLR start "exclusiveOrExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:44:1: exclusiveOrExpression returns [Expression value] : l= andExpression ( '^' r= andExpression )* ;

   public final Expression exclusiveOrExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:45:5: (l= andExpression ( '^' r= andExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:45:9: l= andExpression ( '^' r= andExpression )*
         {
            pushFollow(FOLLOW_andExpression_in_exclusiveOrExpression304);
            l = andExpression();

            state._fsp--;

            value = l;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:46:9: ( '^' r= andExpression )*
            loop4:
            do {
               int alt4 = 2;
               int LA4_0 = input.LA(1);

               if ((LA4_0 == CARET)) {
                  alt4 = 1;
               }


               switch (alt4) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:46:10: '^' r= andExpression
                  {
                     match(input, CARET, FOLLOW_CARET_in_exclusiveOrExpression317);
                     pushFollow(FOLLOW_andExpression_in_exclusiveOrExpression323);
                     r = andExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.XOr, value, r);

                  }
                  break;

                  default:
                     break loop4;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "exclusiveOrExpression"


   // $ANTLR start "andExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:50:1: andExpression returns [Expression value] : l= equalityExpression ( '&' r= equalityExpression )* ;

   public final Expression andExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:51:5: (l= equalityExpression ( '&' r= equalityExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:51:9: l= equalityExpression ( '&' r= equalityExpression )*
         {
            pushFollow(FOLLOW_equalityExpression_in_andExpression367);
            l = equalityExpression();

            state._fsp--;

            value = l;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:52:9: ( '&' r= equalityExpression )*
            loop5:
            do {
               int alt5 = 2;
               int LA5_0 = input.LA(1);

               if ((LA5_0 == AMP)) {
                  alt5 = 1;
               }


               switch (alt5) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:52:10: '&' r= equalityExpression
                  {
                     match(input, AMP, FOLLOW_AMP_in_andExpression380);
                     pushFollow(FOLLOW_equalityExpression_in_andExpression386);
                     r = equalityExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.And, value, r);

                  }
                  break;

                  default:
                     break loop5;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "andExpression"


   // $ANTLR start "equalityExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:56:1: equalityExpression returns [Expression value] : l= relationalExpression ( ( '==' | '!=' ) r= relationalExpression )* ;

   public final Expression equalityExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:57:5: (l= relationalExpression ( ( '==' | '!=' ) r= relationalExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:57:9: l= relationalExpression ( ( '==' | '!=' ) r= relationalExpression )*
         {
            pushFollow(FOLLOW_relationalExpression_in_equalityExpression431);
            l = relationalExpression();

            state._fsp--;

            value = l;
            Expression.Operator op = null;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:58:9: ( ( '==' | '!=' ) r= relationalExpression )*
            loop7:
            do {
               int alt7 = 2;
               int LA7_0 = input.LA(1);

               if ((LA7_0 == EQEQ || LA7_0 == BANGEQ)) {
                  alt7 = 1;
               }


               switch (alt7) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:59:13: ( '==' | '!=' ) r= relationalExpression
                  {
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:59:13: ( '==' | '!=' )
                     int alt6 = 2;
                     int LA6_0 = input.LA(1);

                     if ((LA6_0 == EQEQ)) {
                        alt6 = 1;
                     } else if ((LA6_0 == BANGEQ)) {
                        alt6 = 2;
                     } else {
                        NoViableAltException nvae =
                           new NoViableAltException("", 6, 0, input);

                        throw nvae;
                     }
                     switch (alt6) {
                        case 1:
                           // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:59:17: '=='
                        {
                           match(input, EQEQ, FOLLOW_EQEQ_in_equalityExpression463);
                           op = Expression.Operator.Equal;

                        }
                        break;
                        case 2:
                           // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:60:17: '!='
                        {
                           match(input, BANGEQ, FOLLOW_BANGEQ_in_equalityExpression483);
                           op = Expression.Operator.NotEqual;

                        }
                        break;

                     }

                     pushFollow(FOLLOW_relationalExpression_in_equalityExpression517);
                     r = relationalExpression();

                     state._fsp--;

                     value = new BinaryExpression(op, value, r);

                  }
                  break;

                  default:
                     break loop7;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "equalityExpression"


   // $ANTLR start "relationalExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:66:1: relationalExpression returns [Expression value] : l= shiftExpression (op= relationalOp r= shiftExpression )* ;

   public final Expression relationalExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression.Operator op = null;

      Expression r = null;


      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:67:5: (l= shiftExpression (op= relationalOp r= shiftExpression )* )
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:67:9: l= shiftExpression (op= relationalOp r= shiftExpression )*
         {
            pushFollow(FOLLOW_shiftExpression_in_relationalExpression557);
            l = shiftExpression();

            state._fsp--;

            value = l;
            // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:68:9: (op= relationalOp r= shiftExpression )*
            loop8:
            do {
               int alt8 = 2;
               int LA8_0 = input.LA(1);

               if (((LA8_0 >= GT && LA8_0 <= LT))) {
                  alt8 = 1;
               }


               switch (alt8) {
                  case 1:
                     // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:69:9: op= relationalOp r= shiftExpression
                  {
                     pushFollow(FOLLOW_relationalOp_in_relationalExpression583);
                     op = relationalOp();

                     state._fsp--;

                     pushFollow(FOLLOW_shiftExpression_in_relationalExpression587);
                     r = shiftExpression();

                     state._fsp--;

                     value = new BinaryExpression(op, value, r);

                  }
                  break;

                  default:
                     break loop8;
               }
            } while (true);


         }

      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "relationalExpression"


   // $ANTLR start "relationalOp"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:73:1: relationalOp returns [Expression.Operator value] : ( '<' '=' | '>' '=' | '<' | '>' );

   public final Expression.Operator relationalOp() throws RecognitionException {
      Expression.Operator value = null;

      try {
         // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:74:5: ( '<' '=' | '>' '=' | '<' | '>' )
         int alt9 = 4;
         int LA9_0 = input.LA(1);

         if ((LA9_0 == LT)) {
            int LA9_1 = input.LA(2);

            if ((LA9_1 == EQ)) {
               alt9 = 1;
            } else if (((LA9_1 >= IDENTIFIER && LA9_1 <= NULL) || (LA9_1 >= SUPER && LA9_1 <= LPAREN) || (LA9_1 >= BANG && LA9_1 <= TILDE))) {
               alt9 = 3;
            } else {
               NoViableAltException nvae =
                  new NoViableAltException("", 9, 1, input);

               throw nvae;
            }
         } else if ((LA9_0 == GT)) {
            int LA9_2 = input.LA(2);

            if ((LA9_2 == EQ)) {
               alt9 = 2;
            } else if (((LA9_2 >= IDENTIFIER && LA9_2 <= NULL) || (LA9_2 >= SUPER && LA9_2 <= LPAREN) || (LA9_2 >= BANG && LA9_2 <= TILDE))) {
               alt9 = 4;
            } else {
               NoViableAltException nvae =
                  new NoViableAltException("", 9, 2, input);

               throw nvae;
            }
         } else {
            NoViableAltException nvae =
               new NoViableAltException("", 9, 0, input);

            throw nvae;
         }
         switch (alt9) {
            case 1:
               // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:74:10: '<' '='
            {
               match(input, LT, FOLLOW_LT_in_relationalOp629);
               match(input, EQ, FOLLOW_EQ_in_relationalOp631);
               value = Expression.Operator.LTE;

            }
            break;
            case 2:
               // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:75:10: '>' '='
            {
               match(input, GT, FOLLOW_GT_in_relationalOp644);
               match(input, EQ, FOLLOW_EQ_in_relationalOp646);
               value = Expression.Operator.GTE;

            }
            break;
            case 3:
               // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:76:9: '<'
            {
               match(input, LT, FOLLOW_LT_in_relationalOp658);
               value = Expression.Operator.LT;

            }
            break;
            case 4:
               // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:77:9: '>'
            {
               match(input, GT, FOLLOW_GT_in_relationalOp670);
               value = Expression.Operator.GT;

            }
            break;

         }
      }
      catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      }
      finally {
      }
      return value;
   }
   // $ANTLR end "relationalOp"


   // $ANTLR start "shiftExpression"
   // /Users/erdinc/Projects/cambridge/src/main/java/cambridge/parser/expressions/Expression.g:80:1: shiftExpression returns [Expression value] : l= additiveExpression (op= shiftOp r= additiveExpression )* ;

   public final Expression shiftExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression.Operator op = null;

      Expression r = null;

